fixed messages style on mobile, added ratlimit for message view

--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -1490,7 +1490,10 @@ input.raykomfi-input:checked + .raykomfi-slider:before {
 }
 
 /* 100% Image Width on Smaller Screens */
-@media only screen and (min-width: 601px) and (max-width: 992px) {
+@media only screen and (min-width: 320px) and (max-width: 992px) {
+  .message-wrapper {
+    margin-top: 20px;
+  }
 }
 
 @media only screen and (max-width: 600px) {
